# contracts/openapi/paths/api/playlists/{id}/roles.yaml
@@ -32,8 +32,8 @@
       "500":
         $ref: "#/components/responses/InternalServerError"
   post:
-    summary: Add playlist roles
-    operationId: addPlaylistRoles
+    summary: Set playlist roles
+    operationId: setPlaylistRoles
     tags:
       - Playlists
       - Roles
@@ -64,8 +64,8 @@
                 role:
                   $ref: "#/components/schemas/PlaylistRoleType"
     responses:
-      "200":
-        description: Playlist roles added successfully
+      "204":
+        description: Playlist roles set successfully
         content:
           application/json:
             schema:
